Minor Update -> Project details

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta
       name="description"
-      content="One Page Website Template in ReactJS"
+      content="Pimp My Book - Placeholder Website"
     />
     <!-- Link Elements -->
     <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
