added primary meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
   <link rel="manifest" href="./icons/site.webmanifest">
   <link rel="mask-icon" href="favicon.png" color="#f48d1f">
   <title>Pimp My Book</title>
+
+  <!-- Primary Meta Tags -->
+  <title>GOA - Simplified Bursary Administration</title>
+  <meta name="title" content="Pimp My Book">
+  <meta name="description" content="Making education accessible ">
 </head>
 
 <body>
