added facebook meta

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
   <title>GOA - Simplified Bursary Administration</title>
   <meta name="title" content="Pimp My Book">
   <meta name="description" content="Making education accessible ">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pimpmybook.co.za">
+  <meta property="og:title" content="Pimp My Book">
+  <meta property="og:description" content="Making education accessible">
+  <meta property="og:image" content="https://s3.amazonaws.com/goa-assets/Images/meta-image.png">
+
 </head>
 
 <body>
