done with everything

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,15 @@
   <meta property="og:url" content="https://pimpmybook.co.za">
   <meta property="og:title" content="Pimp My Book">
   <meta property="og:description" content="Making education accessible">
-  <meta property="og:image" content="https://s3.amazonaws.com/goa-assets/Images/meta-image.png">
+  <meta property="og:image" content="https://s3.amazonaws.com/assets.pmbplus/meta.svg">
 
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://pimpmybook.co.za">
+  <meta property="twitter:title" content="Pimp My Book">
+  <meta property="twitter:description" content="Making education accessible.">
+  <meta property="twitter:image" content="https://s3.amazonaws.com/assets.pmbplus/meta.svg">
 </head>
 
 <body>
